--- a/website/templates/presentation_maker_webpage.html
+++ b/website/templates/presentation_maker_webpage.html
@@ -11,6 +11,15 @@
     
     <link rel="stylesheet" href="{{url_for('static', filename='make_presentation_files/8189.08efdb0a.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='make_presentation_files/qg-feature.85c0a68f.css')}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"/>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="https://kit.fontawesome.com/e113ce4425.js" crossorigin="anonymous"></script>
+
+    <!--custom js and css-->
+    <script src="{{ url_for('static', filename='make_presentation.js') }}"></script>
+
 </head>
 
 <body class="lang-en">
@@ -37,8 +46,7 @@
         </div>
     </div>
 
-
-
+    
     <div id="post-header" class="post-header">
         <div class="color-stripe row w-100 no-margin ">
             <div class="bg-main-1"></div>
@@ -95,25 +103,25 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="upload-container">
-
-
                                     <div class="uploadbox-wrapper">
-                                        <div
-                                            class="vue-uploadbox-wrap br-8 position-relative bg-main-4 p-10 bg-lighten">
+                                        <div class="vue-uploadbox-wrap br-8 position-relative bg-main-4 p-10 bg-lighten">
                                             <div
                                                 class="d-flex br-8 fg-white h-75 w-100 bg-main-4 border-white border-dashed border-1 h-100">
                                                 <div id="remoteUploadDialog"
                                                     class="w-100 h-100 d-flex flex-column align-items-center justify-content-end position-relative">
                                                     <div class="font-size-150 font-weight-bold py-3 mb-2">Enter URL</div>
-                                                    <div class="font-size-125 w-100 px-5 text-center">
+                                                    <form id="addRemoteUrlForm" method="post" action="/add-url" class="font-size-125 w-100 px-5 text-center">
                                                         <div><input id="remoteUrlInput" type="text"
                                                                 placeholder="http://www.example.com/examplefile.pdf"
                                                                 onfocus="this.placeholder=&#39;&#39;"
                                                                 onblur="this.placeholder=&#39;http://www.example.com/examplefile.pdf&#39;"
-                                                                class="w-100 rounded no-border py-2 px-3 font-size-125">
+                                                                class="w-100 rounded no-border py-2 px-3 font-size-125"
+                                                                name="url">
                                                         </div>
-                                                        <button id="addRemoteUrlButton"
-                                                            class="btn-success btn font-weight-bold text-uppercase mt-4 mb-5 py-2 vue-uploadbox-remote-add-button">Add
+                                                        <button type="submit" id="addRemoteUrlButton"
+                                                            class="btn-success btn font-weight-bold text-uppercase mt-4 mb-5 py-2 vue-uploadbox-remote-add-button"
+                                                            onclick="">
+                                                            Add
                                                         </button>
                                                     </div>
                                                 </div> <!---->
@@ -132,13 +140,14 @@
                                         <span class="clearfix"></span>
 
                                     </div>
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="row ">
                             <div class="col-12">
                                 <div class="files-list files-list_v2 mb-0" id="fileuploadlist">
-                                    <div class="files-list"></div>
+                                    <div id="filesList" class="files-list">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +161,7 @@
         <div class="container" id="page_function_container">
             <div class="clearfix"></div>
             <div class="row">
-                <div class="col-md-8 col-lg-8">
+                <div class="col-lg-8">
                     <form id="sendform" action="https://www.compress2go.com/create-zip-file#" method="post">
                         <input data-options-type="base" type="hidden" class="hidden" name="category" value="archive">
                         <input data-options-type="options" data-value-type="boolean" type="hidden" class="hidden"
@@ -600,6 +609,7 @@
 
     <!---->
     <div id="userQuestionnaireModal"></div>
+    
 </body>
 
 </html>
