--- a/website/templates/presentation_maker_webpage.html
+++ b/website/templates/presentation_maker_webpage.html
@@ -29,8 +29,7 @@
             <div class="row justify-content-between h-100">
                 <nav class="navbar d-flex z-index-2 px-0 py-0 position-static h-100 justify-content-between flex-grow-1-unimportant flex-grow-md-0" >
                     <div class="d-flex h-100 align-items-center pl-4 w-100 justify-content-center">
-                        <a class="navbar-brand pr-4 d-flex justify-content-start mr-0"
-                            href="https://www.compress2go.com/" title="Different tools to compress all kinds of files">
+                        <a class="navbar-brand pr-4 d-flex justify-content-start mr-0">
                             <img src="{{url_for('static', filename='logo.png')}}"
                                 width="250" height="60" alt="Compress your files online and for free"
                                 class="header-logo-responsive d-sm-block">
@@ -60,9 +59,8 @@
             <div id="recaptchaContainer"></div>
             <div class="container content-header">
                 <div class="w-100 mx-0">
-                    <h1>Create Your PowerPoint file</h1>
-                    <h2 class="text-left">With this online Powerpoint maker you can extract information form your files and create a powerpoint
-                        file. save time and share ideas with powerpoint presentations</h2>
+                    <h1>Create Your PowerPoint now</h1>
+                    <h2 class="text-left">With this online Powerpoint maker you can extract information form your files and create your presentation quickly. save time and share ideas with powerpoint presentations</h2>
                 </div>
             </div>
 
@@ -132,7 +130,7 @@
         <div class="container" id="page_function_container">
             <div class="clearfix"></div>
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-7">
                     <form id="sendform" action="https://www.compress2go.com/create-zip-file#" method="post">
                         <input data-options-type="base" type="hidden" class="hidden" name="category" value="archive">
                         <input data-options-type="options" data-value-type="boolean" type="hidden" class="hidden"
@@ -162,25 +160,25 @@
                         </noscript>
                     </form>
                 </div>
-                <div class="col-md-4">
+                <form id="createPresentationForm" class="col-md-5">
                     <div class="form-group pt-0">
                         <input id="presentationTitle" class="w-100 rounded border py-2 px-3 font-size-125 mb-0" type="text"  placeholder="enter title for your presentation" required/>
                     </div>
                     <div class="form-group pt-0">
-                        <button type="button" class="btn btn-lg btn-success mb-0 white-space-nowrap mr-3 mb-3"
-                            id="startBtn" onclick="startCreatingPresentation()">
-                            <strong class="text-uppercase">Start</strong>
+                        <button type="submit" class="btn btn-lg btn-success white-space-nowrap mr-1 mb-3"
+                            id="startBtn">
+                            <strong id="startBtnText" class="text-uppercase">Start</strong>
                         </button>
-                        <a class="btn btn-lg btn-success mb-0 white-space-nowrap mr-3 mb-3"
+                        <a class="btn btn-lg btn-success white-space-nowrap mb-3 mr-1"
                             id="downloadBtn" href="/download">
                             <strong class="text-uppercase">Download</strong>
                         </a>
-                        <button type="button" class="btn btn-lg btn-danger mb-0 white-space-nowrap mr-3 mb-3"
+                        <button type="button" class="btn btn-lg btn-danger white-space-nowrap mb-3"
                             id="clearBtn" onclick="clearAll()">
                             <strong class="text-uppercase">Clear</strong>
                         </button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
